--- a/frontend/src/components/Auth/register.css
+++ b/frontend/src/components/Auth/register.css
@@ -39,6 +39,8 @@
     padding: 1px;
     margin-bottom: 2px;
     background-color:white;
+    margin:auto;
+
     /* box-shadow: 15px 15px 15px rgba(219, 213, 213, 0.2), 
     -8px 10px 10px rgba(0,0,0,0.1);
     border-radius: 10px; */
@@ -103,7 +105,7 @@
     cursor: pointer;
     transition: all 0.5s;
     margin: auto;
-    margin-top: 8%;
+    margin-top: 5%;
     border-radius: 4px;
     background-position-y: 10%;
     background-position-x: 10%;
