--- a/frontend/src/components/Auth/login.css
+++ b/frontend/src/components/Auth/login.css
@@ -1,4 +1,4 @@
-.form{
+.formm{
   width: 100vw;
   height: 100vh;
   max-width: 100%;
@@ -11,10 +11,12 @@
   background-position-x: 5%;
   background-size: 88vh;
   position: fixed;
+  margin: auto;
+  margin-top: 1%;
   top: 0%;
   left: 0;
 }
-.log_form_body{
+.log_form{
   text-align: left;
   padding: 20px 20px;
   border: 2px solid #0000001a;
@@ -30,24 +32,8 @@
   border-radius: 10px;
   background: none;
 }
-.roles_toggle {
-    display: flex;
-    height: 3vmax; 
-  }
- .roles_toggle > p {
-    color: rgba(0, 0, 0, 0.675);
-    font: 400 2vmax "Roboto";
-    transition: all 0.5s;
-    cursor: pointer;
-    display: grid;
-    place-items: center;
-    width: 100%;
-    font-size: 120%;
-  }
-  .roles_toggle > p:hover {
-    color: lightblue;
-  }
-.form__input_login{
+
+.input_login{
   background-color: whitesmoke;
   height: 3px;
   width: 50%;
@@ -70,7 +56,7 @@
 .log_btn{
   align-items: center;
   border: none;
-  background-color:lightblue;
+  background-color:rgb(81, 152, 179);
   color: white;
   font: 300 1.8vmax "Roboto";
   width: 50%;
@@ -86,6 +72,11 @@
   justify-content: center;
   outline: none;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.219);
+}
+.log_btn:hover{
+  cursor: pointer;
+  background-color: #f0f0f0;
+  color: #202020;
 }
 .forgot p
 {
