--- a/frontend/src/components/Examm/styles/main.css
+++ b/frontend/src/components/Examm/styles/main.css
@@ -16,38 +16,32 @@
     font-size: 1.2em;
     color: #202020;
     text-decoration: none;
-    background-color: lightblue;
+    background-color: rgb(81, 152, 179);
 
     align-items: center;
     border: none;
-    background-color:lightblue;
+    background-color:rgb(60, 123, 145)lightblue;
     color: white;
     font: 300 1.8vmax "Roboto";
-    width: 50%;
+    width: 30%;
     padding: 0.8vmax;
     cursor: pointer;
     transition: all 0.5s;
     margin: auto;
-    margin-top: 5%;
+    /* margin-top: 2%; */
     border-radius: 4px;
-    background-position-y: 10%;
-    background-position-x: 10%;
+    background-position-y: 2%;
+    background-position-x: 2%;
     display: flex;
     justify-content: center;
     outline: none;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.219);
 }
-
-#form{
-    display: flex;
-    justify-content: center;
-    margin-top: 4em;
+.start .butn:hover{
+    cursor: pointer;
+    background-color: #f0f0f0;
+    color: #202020;
 }
 
-#form .userid{
-    padding: .7em 2em;
-    width: 50%;
-    border: none;
-    border-radius: 3px;
-    font-size: 1em;
-}
+
+
