--- a/frontend/src/components/Auth/register.css
+++ b/frontend/src/components/Auth/register.css
@@ -1,4 +1,4 @@
-.form{
+/* .form{
     width: 100vw;
     height: 100vh;
     max-width: 100%;
@@ -39,12 +39,12 @@
     padding: 1px;
     margin-bottom: 2px;
     background-color:white;
-    margin:auto;
+    margin:auto; */
 
     /* box-shadow: 15px 15px 15px rgba(219, 213, 213, 0.2), 
     -8px 10px 10px rgba(0,0,0,0.1);
     border-radius: 10px; */
-     font: 200 "Gill Sans"; 
+     /* font: 200 "Gill Sans"; 
 }
 .header p {
     font-size: 140%;
@@ -62,7 +62,7 @@
     width: 40%;
     font: 100 1.8vmax "Gill Sans";
 }
-.form__input{
+.form__input{ */
     /* width: 60%;
     height: 40%;
     font: 500 1.5vmax "Gill Sans";
@@ -77,10 +77,10 @@
     box-shadow: 15px 15px 15px white, 
     -15px 15px 15px white;
     border-radius: 10px; */
-    background-color: whitesmoke;
-    height: 3px;
+    /* background-color: whitesmoke;
+    height: 3px; */
     /* height: 40%; */
-    width: 50%;
+    /* width: 50%;
     border: none;
     transition: all 0.5s;
     display: flex;
@@ -90,9 +90,9 @@
     padding: 2vmax;
     justify-content: space-evenly;
     transition: all 0.5s;
-    font-size: 100%;
+    font-size: 100%; */
 
-}
+/* }
 .btn{
     align-items: center;
     border: none;
@@ -101,26 +101,26 @@
     font: 300 1.8vmax "Roboto";
     width: 50%;
     /* padding: 0.8vmax; */
-    cursor: pointer;
+    /* cursor: pointer;
     transition: all 0.5s;
     margin: auto;
     /* margin-top: 5%;
     border-radius: 4px; */
-    background-position-y: 10%;
+    /* background-position-y: 10%;
     background-position-x: 10%;
     display: flex;
-    justify-content: center;
-    outline: none;
+    justify-content: center; */
+    /* outline: none;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.219);
     margin-top: 20px;
     padding: 10px 20px;
-    
+/*      
 }
 .btn:hover{
     cursor: pointer;
     background-color: #f0f0f0;
     color: #202020;
-}
+}  */
  /* .pp{
     margin: auto;
     margin-top: 5%;
@@ -143,7 +143,7 @@
     
     text-align: center;
 } */
-#registerImage > img {
+/* #registerImage > img {
     width: 3vmax;
     border-radius: 100%;
     margin-left: 5px;
@@ -167,8 +167,8 @@
     border: none;
     margin: auto;
     margin-top: 40%;
-    font: 400 0.8vmax cursive;
-    transition: all 0.5s;
+    font: 400 0.8vmax cursive; */
+    /* transition: all 0.5s;
     padding: 0 1vmax;
     color: rgba(0, 0, 0, 0.623);
     background-color: rgb(255, 255, 255);
@@ -188,7 +188,7 @@
   margin: auto;
   /* margin-top: 50%; */
   /* margin-bottom: 89%; */
-  margin-left: 67%;
+  /* margin-left: 67%;
   padding-top: 18%;
 }
 select {
@@ -199,9 +199,9 @@ select {
     border: none;
     outline: none;
     padding: 10px;
-    background-color: whitesmoke;
+    background-color: whitesmoke; */ 
     /* height: %; */
-    width:  63%;
+    /* width:  63%;
     border: none;
     transition: all 0.5s;
     display: flex;
@@ -214,4 +214,4 @@ select {
     transition: all 0.5s;
     font-size: 100%;
     
-  }
+  } */
