--- a/frontend/src/style/allRegister.css
+++ b/frontend/src/style/allRegister.css
@@ -23,10 +23,10 @@
   border: 2px solid #0000001a;
   padding: 10px;
   margin-right: 17%;
-  margin-top: -2%;
+  margin-top: -7%;
   left: 0;
   width: 30vw;
-  height: 100vh;
+  height: 90vh;
   background-size: 100vh;
   overflow: hidden;
   box-shadow: 15px 15px 15px rgba(219, 213, 213, 0.2), 
@@ -34,7 +34,6 @@
   border-radius: 10px;
   background: none;
 }
-
 .header {
   box-sizing: border-box;
   width: 100%;
@@ -45,7 +44,7 @@
   margin-bottom: 5px;
   background-color: white;
   margin: auto;
-  margin-top: -5%;
+  margin-top: 1%;
   font: 200 "Gill Sans"; 
 }
 
@@ -132,12 +131,14 @@
 #registerImage > img {
   width: 3vmax;
   border-radius: 100%;
+  margin: auto;
+  margin-top: -20%;
 }
 
 #registerImage > input {
   display: flex;
   padding: 0%;
-  margin-left: 5px;
+  margin-left: 50px;
 }
 
 #registerImage > input::file-selector-button {
@@ -146,6 +147,7 @@
   height: 5vh;
   border: none;
   margin: 0%;
+  margin-top: -4%;
   font: 500 1.5vmax "Gill Sans";
   transition: all 0.5s;
   padding: 0 1vmax;
@@ -165,7 +167,7 @@ select {
   background-color: transparent;
   border: none;
   outline: none;
-  padding: 10px;
+  /* padding: 10px; */
   background-color: whitesmoke;
   border: none;
   transition: all 0.5s;
@@ -179,8 +181,7 @@ select {
   transition: all 0.5s;
   font: 500 1.5vmax "Gill Sans";
   z-index: 2;
-
-  width: 80%;
+  width: 78%;
   border-radius: 10px; 
 }
 .select-arrow{
@@ -196,3 +197,38 @@ select {
   position: absolute;
  
 }
+/* #registerImage > img {
+  width: 3vmax;
+  border-radius: 100%;
+}
+#registerImage > input {
+  display: flex;
+  padding: 0%;
+  margin-left: 5px;
+}
+#registerImage > input::file-selector-button {
+  cursor: pointer;
+  width: 100%;
+  z-index: 2;
+  height: 5vh;
+  border: none;
+  margin: 0%;
+  font: 400 0.8vmax cursive;
+  transition: all 0.5s;
+  padding: 0 1vmax;
+  color: rgba(0, 0, 0, 0.623);
+  background-color: rgb(255, 255, 255);
+}
+
+#registerImage > input::file-selector-button:hover {
+  background-color: rgb(235, 235, 235);
+}
+#registerImage > img {
+  width: 8vmax;
+  border-radius: 100%;
+}
+
+#registerImage > input::file-selector-button {
+  height: 7vh;
+  font: 400 1.8vmax cursive;
+} */
