--- a/frontend/src/teachers/QuestionForm.css
+++ b/frontend/src/teachers/QuestionForm.css
@@ -1,13 +1,35 @@
 .question-form-container {
-  max-width: 800px;
+  /* max-width: 800px; */
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  
+  
+
+}
+.texts{
+  color:black;
+}
+/* .type{
+  align-items: left;
+  margin-bottom: 10px;
+  width: 100px;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
-}
-
+  /* background-repeat: no-repeat;
+  background-position: left;
+  background-position-x: 5%;
+  background-size: 88vh; */
+  /* left: -30%;
+  position:relative;
+  margin: auto; */
+  /* margin-top: -5%; */
 .form-group {
-  margin-bottom: 10px;
+  display: flex; 
+  justify-content: flex-end;
+  
 }
 
 .error {
@@ -16,7 +38,7 @@
 
 table {
   width: 100%;
-  border-collapse: collapse;
+  /* border-collapse: collapse; */
   margin-top: 20px;
 }
 
