--- a/frontend/src/components/Examm/styles/app.css
+++ b/frontend/src/components/Examm/styles/app.css
@@ -219,3 +219,23 @@ input[type=radio]:checked ~ .text-primary{
   transition: all 0.5s;
   font-size: 100%;
 }
+.question-button {
+  background-color: #ddd;
+  border: none;
+  /* margin-right: */
+}
+.question-button {
+  background-color: #ddd;
+  border: none;
+  margin-right: 10px;
+  padding: 5px;
+  border-radius: 50%;
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+}
+
+.question-button.answered {
+  background-color: blue;
+  color: white;
+}
