--- a/frontend/src/components/Auth/footer.css
+++ b/frontend/src/components/Auth/footer.css
@@ -1,4 +1,4 @@
-.Footer {
+/* .Footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -8,9 +8,9 @@
     font-size: 14px;
     color: #333;
     /* border-top: .3px solid rgba(21,21,21,0.5); */
-  }
   
-  .Footer__topbar {
+  
+  /*.Footer__topbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -79,5 +79,52 @@
     .mobile {
       margin-bottom: 20px;
     }
+  }*/
+
+  .Footer.flex.space__around.pz__15 {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 8vmax;
+  }
+  footer {
+    background-color: #f2f2f2;
+    border-top: 1px solid #ccc;
+    padding: 20px 0;
   }
   
+  .footer-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .footer-column {
+    width: 30%;
+  }
+  
+  .footer-column h3 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .footer-column ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .footer-column li {
+    margin-bottom: 5px;
+  }
+  
+  .footer-column a {
+    color: #333;
+    text-decoration: none;
+  }
+  
+  .footer-column a:hover {
+    text-decoration: underline;
+  }
