--- a/frontend/src/components/Examm/styles/app.css
+++ b/frontend/src/components/Examm/styles/app.css
@@ -236,6 +236,6 @@ input[type=radio]:checked ~ .text-primary{
 }
 
 .question-button.answered {
-  background-color: blue;
+  background-color: rgb(180, 180, 252);
   color: white;
 }
