--- a/frontend/src/style/exammm.css
+++ b/frontend/src/style/exammm.css
@@ -1,3 +1,39 @@
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+.form-group label,
+.form-group input,
+.form-group .form-text {
+  display: block;
+}
+
+.form-group label {
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+.form-group input[type="text"],
+.form-group input[type="number"],
+.form-group input[type="datetime-local"] {
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+  width: 100%;
+}
+
+.form-group .form-text {
+  margin-top: 0.25rem;
+  font-size: 0.875rem;
+  color: #dc3545;
+}
+
+.form-group input[type="datetime-local"]::-webkit-inner-spin-button,
+.form-group input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+  display: none;
+}
 .foorm {
   display: flex;
   flex-direction: column;
@@ -29,7 +65,7 @@
   font-size: 14px;
   color: #dc3545;
   margin-top: 5px;
-}
+} 
 
 /* .btn {
   background-color: #0077ff;
