--- a/frontend/src/style/exammm.css
+++ b/frontend/src/style/exammm.css
@@ -1,4 +1,4 @@
-.form-group {
+/* .form-group {
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
@@ -33,7 +33,7 @@
 .form-group input[type="datetime-local"]::-webkit-inner-spin-button,
 .form-group input[type="datetime-local"]::-webkit-calendar-picker-indicator {
   display: none;
-}
+} */
 .foorm {
   display: flex;
   flex-direction: column;
@@ -66,6 +66,48 @@
   color: #dc3545;
   margin-top: 5px;
 } 
+.form-toggle {
+  position: relative;
+}
+
+.form-toggle input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.toggle-switch {
+  display: block;
+  width: 60px;
+  height: 34px;
+  border-radius: 17px;
+  background-color: #ccc;
+  position: relative;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.toggle-switch::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #fff;
+  top: 2px;
+  left: 2px;
+  transition: transform 0.3s;
+}
+
+.form-toggle input[type="checkbox"]:checked + .toggle-switch {
+  background-color: #1abc9c;
+}
+
+.form-toggle input[type="checkbox"]:checked + .toggle-switch::before {
+  transform: translateX(26px);
+}
 
 /* .btn {
   background-color: #0077ff;
