--- a/frontend/src/style/chair.css
+++ b/frontend/src/style/chair.css
@@ -59,3 +59,10 @@
     margin: 20px;
 }
 
+.view {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: rgb(81, 152, 179);
+  color: white;
+}
